// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when window.connect is defined Style should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  width: var(--ac-widget-send-button-size,32px);
  height: var(--ac-widget-send-button-size,32px);
  border-radius: 50%;
  cursor: default;
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
  background-color: var(--ac-widget-send-button-bg,#EDEDED);
}

.c8>svg {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  fill: var(--ac-widget-send-button-icon-color,#FFFFFF);
}

.c8>img {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  object-fit: contain;
}

.c0 {
  margin: 0;
  padding: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  background: var(--ac-widget-composer-background,#FFFFFF);
  border: var(--ac-widget-composer-border,1px solid #CCCCCC);
  border-radius: var(--ac-widget-composer-border-radius,24px);
  margin: var(--ac-widget-composer-margin,8px 16px 16px);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: absolute;
  top: 50%;
  right: var(--ac-widget-composer-send-button-offset,10px);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--ac-widget-composer-icons-gap,6px);
  z-index: 2;
}

.c5 {
  cursor: pointer;
  height: auto;
  vertical-align: top;
}

.c5 button {
  height: 100%;
  width: 100%;
}

.c5 label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  font-size: 0;
  height: 100%;
  margin-bottom: 0;
}

.c5 input {
  display: none;
}

.c6 {
  background-color: transparent;
  border: 1px solid transparent;
  position: relative;
  padding: 0;
  margin: 0;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  word-break: break-word;
  font-family: inherit;
  padding: 10px;
  padding-left: 14px;
  padding-right: var(--ac-widget-composer-icons-clearance,84px);
  background: transparent;
  line-height: 1.5rem;
  overflow-y: auto;
  min-height: 39px;
  z-index: 2;
  resize: none;
  font-size: var(--ac-widget-composer-fontsize,var(--ac-widget-global-fontsize,16px));
  border: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c3::-webkit-input-placeholder {
  color: #666666;
}

.c3::-moz-placeholder {
  color: #666666;
}

.c3:-ms-input-placeholder {
  color: #666666;
}

.c3::placeholder {
  color: #666666;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0;
}

.c7 svg {
  width: 24px;
  height: 24px;
}

.c9 {
  text-align: center;
  color: var(--ac-widget-composer-disclaimer-color,#666666);
  font-size: var(--ac-widget-composer-disclaimer-fontsize,12px);
  margin: 0 16px 8px;
}

@media (max-width:360px) {
  .c1 {
    margin: var(--ac-widget-composer-margin-small,8px 10px 10px);
  }
}

<div>
      <div
        class="c0 composer"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <textarea
              aria-label="Type a message"
              class="c3"
              data-testid="customer-chat-text-input"
              maxlength="200"
              placeholder="Type a message"
              spellcheck="true"
              tabindex="0"
            />
            <div
              class="c4"
            >
              <div
                class="c5"
                data-testid="customer-chat-attachment-icon"
                tabindex="0"
              >
                <button
                  aria-label="Attach a file"
                  class="c6"
                >
                  <label
                    for="customer-chat-file-select-12344"
                  >
                    <div
                      class="c7"
                    >
                      <svg
                        fill="none"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2.5"
                          stroke="currentColor"
                          stroke-width="1.4"
                          width="16"
                          x="2"
                          y="4"
                        />
                        <circle
                          cx="7"
                          cy="9"
                          fill="currentColor"
                          r="1.3"
                        />
                        <path
                          d="M3.5 15.5 8 11l2.5 2.5L15 9l3.5 5v1a1 1 0 0 1-1 1H4.5a1 1 0 0 1-1-1v-.5Z"
                          fill="currentColor"
                        />
                        <circle
                          cx="18.5"
                          cy="17.5"
                          fill="var(--ac-widget-composer-attach-badge-bg, #232F3E)"
                          r="4.5"
                        />
                        <path
                          d="M18.5 15.7v3.6M16.7 17.5h3.6"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-width="1.4"
                        />
                      </svg>
                    </div>
                    <input
                      accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                      aria-label="Attach a file"
                      data-testid="customer-chat-file-select"
                      id="customer-chat-file-select-12344"
                      multiple=""
                      tabindex="-1"
                      type="file"
                    />
                  </label>
                </button>
              </div>
              <div
                aria-label="Send Message"
                class="c8"
                data-testid="customer-chat-send-message-button"
                tabindex="0"
              >
                <svg
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M4.01 6.03L11.52 9.25L4 8.25L4.01 6.03ZM11.51 14.75L4 17.97V15.75L11.51 14.75ZM2.01 3L2 10L17 12L2 14L2.01 21L23 12L2.01 3Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c9"
        >
          Virtual Assistant is AI and can make mistakes.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-kGXeez bsulgI composer"
    >
      <div
        class="sc-kpOJdX jeQRPa"
      >
        <div
          class="sc-dxgOiQ coXdhk"
        >
          <textarea
            aria-label="Type a message"
            class="sc-kEYyzF jQVLvh"
            data-testid="customer-chat-text-input"
            maxlength="200"
            placeholder="Type a message"
            spellcheck="true"
            tabindex="0"
          />
          <div
            class="sc-ckVGcZ hjpJjk"
          >
            <div
              class="sc-jKJlTe iAGGzy"
              data-testid="customer-chat-attachment-icon"
              tabindex="0"
            >
              <button
                aria-label="Attach a file"
                class="sc-eNQAEJ ANhXO"
              >
                <label
                  for="customer-chat-file-select-12344"
                >
                  <div
                    class="sc-kkGfuU btEicj"
                  >
                    <svg
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2.5"
                        stroke="currentColor"
                        stroke-width="1.4"
                        width="16"
                        x="2"
                        y="4"
                      />
                      <circle
                        cx="7"
                        cy="9"
                        fill="currentColor"
                        r="1.3"
                      />
                      <path
                        d="M3.5 15.5 8 11l2.5 2.5L15 9l3.5 5v1a1 1 0 0 1-1 1H4.5a1 1 0 0 1-1-1v-.5Z"
                        fill="currentColor"
                      />
                      <circle
                        cx="18.5"
                        cy="17.5"
                        fill="var(--ac-widget-composer-attach-badge-bg, #232F3E)"
                        r="4.5"
                      />
                      <path
                        d="M18.5 15.7v3.6M16.7 17.5h3.6"
                        stroke="white"
                        stroke-linecap="round"
                        stroke-width="1.4"
                      />
                    </svg>
                  </div>
                  <input
                    accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                    aria-label="Attach a file"
                    data-testid="customer-chat-file-select"
                    id="customer-chat-file-select-12344"
                    multiple=""
                    tabindex="-1"
                    type="file"
                  />
                </label>
              </button>
            </div>
            <div
              aria-label="Send Message"
              class="sc-bdVaJa iOYBrR"
              data-testid="customer-chat-send-message-button"
              tabindex="0"
            >
              <svg
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M4.01 6.03L11.52 9.25L4 8.25L4.01 6.03ZM11.51 14.75L4 17.97V15.75L11.51 14.75ZM2.01 3L2 10L17 12L2 14L2.01 21L23 12L2.01 3Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-jDwBTQ gWOlsA"
      >
        Virtual Assistant is AI and can make mistakes.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`when window.connect is not defined Style should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  width: var(--ac-widget-send-button-size,32px);
  height: var(--ac-widget-send-button-size,32px);
  border-radius: 50%;
  cursor: default;
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
  background-color: var(--ac-widget-send-button-bg,#EDEDED);
}

.c8>svg {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  fill: var(--ac-widget-send-button-icon-color,#FFFFFF);
}

.c8>img {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  object-fit: contain;
}

.c0 {
  margin: 0;
  padding: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  background: var(--ac-widget-composer-background,#FFFFFF);
  border: var(--ac-widget-composer-border,1px solid #CCCCCC);
  border-radius: var(--ac-widget-composer-border-radius,24px);
  margin: var(--ac-widget-composer-margin,8px 16px 16px);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: absolute;
  top: 50%;
  right: var(--ac-widget-composer-send-button-offset,10px);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--ac-widget-composer-icons-gap,6px);
  z-index: 2;
}

.c5 {
  cursor: pointer;
  height: auto;
  vertical-align: top;
}

.c5 button {
  height: 100%;
  width: 100%;
}

.c5 label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  font-size: 0;
  height: 100%;
  margin-bottom: 0;
}

.c5 input {
  display: none;
}

.c6 {
  background-color: transparent;
  border: 1px solid transparent;
  position: relative;
  padding: 0;
  margin: 0;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  word-break: break-word;
  font-family: inherit;
  padding: 10px;
  padding-left: 14px;
  padding-right: var(--ac-widget-composer-icons-clearance,84px);
  background: transparent;
  line-height: 1.5rem;
  overflow-y: auto;
  min-height: 39px;
  z-index: 2;
  resize: none;
  font-size: var(--ac-widget-composer-fontsize,var(--ac-widget-global-fontsize,16px));
  border: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c3::-webkit-input-placeholder {
  color: #666666;
}

.c3::-moz-placeholder {
  color: #666666;
}

.c3:-ms-input-placeholder {
  color: #666666;
}

.c3::placeholder {
  color: #666666;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0;
}

.c7 svg {
  width: 24px;
  height: 24px;
}

.c9 {
  text-align: center;
  color: var(--ac-widget-composer-disclaimer-color,#666666);
  font-size: var(--ac-widget-composer-disclaimer-fontsize,12px);
  margin: 0 16px 8px;
}

@media (max-width:360px) {
  .c1 {
    margin: var(--ac-widget-composer-margin-small,8px 10px 10px);
  }
}

<body>
    <div>
      <div
        class="c0 composer"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <textarea
              aria-label="Type a message"
              class="c3"
              data-testid="customer-chat-text-input"
              maxlength="200"
              placeholder="Type a message"
              spellcheck="true"
              tabindex="0"
            />
            <div
              class="c4"
            >
              <div
                class="c5"
                data-testid="customer-chat-attachment-icon"
                tabindex="0"
              >
                <button
                  aria-label="Attach a file"
                  class="c6"
                >
                  <label
                    for="customer-chat-file-select-12344"
                  >
                    <div
                      class="c7"
                    >
                      <svg
                        fill="none"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2.5"
                          stroke="currentColor"
                          stroke-width="1.4"
                          width="16"
                          x="2"
                          y="4"
                        />
                        <circle
                          cx="7"
                          cy="9"
                          fill="currentColor"
                          r="1.3"
                        />
                        <path
                          d="M3.5 15.5 8 11l2.5 2.5L15 9l3.5 5v1a1 1 0 0 1-1 1H4.5a1 1 0 0 1-1-1v-.5Z"
                          fill="currentColor"
                        />
                        <circle
                          cx="18.5"
                          cy="17.5"
                          fill="var(--ac-widget-composer-attach-badge-bg, #232F3E)"
                          r="4.5"
                        />
                        <path
                          d="M18.5 15.7v3.6M16.7 17.5h3.6"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-width="1.4"
                        />
                      </svg>
                    </div>
                    <input
                      accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                      aria-label="Attach a file"
                      data-testid="customer-chat-file-select"
                      id="customer-chat-file-select-12344"
                      multiple=""
                      tabindex="-1"
                      type="file"
                    />
                  </label>
                </button>
              </div>
              <div
                aria-label="Send Message"
                class="c8"
                data-testid="customer-chat-send-message-button"
                tabindex="0"
              >
                <svg
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M4.01 6.03L11.52 9.25L4 8.25L4.01 6.03ZM11.51 14.75L4 17.97V15.75L11.51 14.75ZM2.01 3L2 10L17 12L2 14L2.01 21L23 12L2.01 3Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c9"
        >
          Virtual Assistant is AI and can make mistakes.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-kGXeez bsulgI composer"
    >
      <div
        class="sc-kpOJdX jeQRPa"
      >
        <div
          class="sc-dxgOiQ coXdhk"
        >
          <textarea
            aria-label="Type a message"
            class="sc-kEYyzF jQVLvh"
            data-testid="customer-chat-text-input"
            maxlength="200"
            placeholder="Type a message"
            spellcheck="true"
            tabindex="0"
          />
          <div
            class="sc-ckVGcZ hjpJjk"
          >
            <div
              class="sc-jKJlTe iAGGzy"
              data-testid="customer-chat-attachment-icon"
              tabindex="0"
            >
              <button
                aria-label="Attach a file"
                class="sc-eNQAEJ ANhXO"
              >
                <label
                  for="customer-chat-file-select-12344"
                >
                  <div
                    class="sc-kkGfuU btEicj"
                  >
                    <svg
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2.5"
                        stroke="currentColor"
                        stroke-width="1.4"
                        width="16"
                        x="2"
                        y="4"
                      />
                      <circle
                        cx="7"
                        cy="9"
                        fill="currentColor"
                        r="1.3"
                      />
                      <path
                        d="M3.5 15.5 8 11l2.5 2.5L15 9l3.5 5v1a1 1 0 0 1-1 1H4.5a1 1 0 0 1-1-1v-.5Z"
                        fill="currentColor"
                      />
                      <circle
                        cx="18.5"
                        cy="17.5"
                        fill="var(--ac-widget-composer-attach-badge-bg, #232F3E)"
                        r="4.5"
                      />
                      <path
                        d="M18.5 15.7v3.6M16.7 17.5h3.6"
                        stroke="white"
                        stroke-linecap="round"
                        stroke-width="1.4"
                      />
                    </svg>
                  </div>
                  <input
                    accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                    aria-label="Attach a file"
                    data-testid="customer-chat-file-select"
                    id="customer-chat-file-select-12344"
                    multiple=""
                    tabindex="-1"
                    type="file"
                  />
                </label>
              </button>
            </div>
            <div
              aria-label="Send Message"
              class="sc-bdVaJa iOYBrR"
              data-testid="customer-chat-send-message-button"
              tabindex="0"
            >
              <svg
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M4.01 6.03L11.52 9.25L4 8.25L4.01 6.03ZM11.51 14.75L4 17.97V15.75L11.51 14.75ZM2.01 3L2 10L17 12L2 14L2.01 21L23 12L2.01 3Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-jDwBTQ gWOlsA"
      >
        Virtual Assistant is AI and can make mistakes.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
